[ci skip] Updates

--- a/globals.html
+++ b/globals.html
@@ -68,11 +68,23 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
+							<h3>Enumerations</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-enum"><a href="enums/stellaruritype.html" class="tsd-kind-icon">Stellar<wbr>Uri<wbr>Type</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section ">
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-class"><a href="classes/paystellaruri.html" class="tsd-kind-icon">Pay<wbr>Stellar<wbr>Uri</a></li>
 								<li class="tsd-kind-class"><a href="classes/stellaruri.html" class="tsd-kind-icon">Stellar<wbr>Uri</a></li>
 								<li class="tsd-kind-class"><a href="classes/transactionstellaruri.html" class="tsd-kind-icon">Transaction<wbr>Stellar<wbr>Uri</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Type aliases</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-type-alias tsd-is-not-exported"><a href="globals.html#memotype" class="tsd-kind-icon">Memo<wbr>Type</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-not-exported">
@@ -96,6 +108,19 @@
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Type aliases</h2>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-is-not-exported">
+					<a name="memotype" class="tsd-anchor"></a>
+					<h3>Memo<wbr>Type</h3>
+					<div class="tsd-signature tsd-kind-icon">Memo<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"none"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"id"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"text"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"hash"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"return"</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/b6737f3/src/lib/pay-stellar-uri.ts#L3">lib/pay-stellar-uri.ts:3</a></li>
+						</ul>
+					</aside>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Variables</h2>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-not-exported">
 					<a name="account" class="tsd-anchor"></a>
@@ -103,7 +128,7 @@
 					<div class="tsd-signature tsd-kind-icon">account<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Account</span><span class="tsd-signature-symbol"> =&nbsp;new Account(pubKey, &#x27;1&#x27;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/0721b47/src/lib/transaction-stellar-uri.spec.ts#L7">lib/transaction-stellar-uri.spec.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/b6737f3/src/lib/transaction-stellar-uri.spec.ts#L7">lib/transaction-stellar-uri.spec.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -113,8 +138,8 @@
 					<div class="tsd-signature tsd-kind-icon">pub<wbr>Key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"GD2FWJZFRDO6YCZV4G2JMVDFHJ2LYNYGYMBFSFYZ4MLMVJ4TBTJJIL7F"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;GD2FWJZFRDO6YCZV4G2JMVDFHJ2LYNYGYMBFSFYZ4MLMVJ4TBTJJIL7F&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/0721b47/src/lib/pay-stellar-uri.spec.ts#L5">lib/pay-stellar-uri.spec.ts:5</a></li>
-							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/0721b47/src/lib/transaction-stellar-uri.spec.ts#L6">lib/transaction-stellar-uri.spec.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/b6737f3/src/lib/pay-stellar-uri.spec.ts#L5">lib/pay-stellar-uri.spec.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/b6737f3/src/lib/transaction-stellar-uri.spec.ts#L6">lib/transaction-stellar-uri.spec.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +149,7 @@
 					<div class="tsd-signature tsd-kind-icon">stellar<wbr>Public<wbr>Key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"GD7ACHBPHSC5OJMJZZBXA7Z5IAUFTH6E6XVLNBPASDQYJ7LO5UIYBDQW"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;GD7ACHBPHSC5OJMJZZBXA7Z5IAUFTH6E6XVLNBPASDQYJ7LO5UIYBDQW&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/0721b47/src/lib/stellar-uri.spec.ts#L20">lib/stellar-uri.spec.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/b6737f3/src/lib/stellar-uri.spec.ts#L20">lib/stellar-uri.spec.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +159,7 @@
 					<div class="tsd-signature tsd-kind-icon">stellar<wbr>Secret<wbr>Key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"SBPOVRVKTTV7W3IOX2FJPSMPCJ5L2WU2YKTP3HCLYPXNI5MDIGREVNYC"</span><span class="tsd-signature-symbol"> =&nbsp;&quot;SBPOVRVKTTV7W3IOX2FJPSMPCJ5L2WU2YKTP3HCLYPXNI5MDIGREVNYC&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/0721b47/src/lib/stellar-uri.spec.ts#L22">lib/stellar-uri.spec.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/b6737f3/src/lib/stellar-uri.spec.ts#L22">lib/stellar-uri.spec.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -144,7 +169,7 @@
 					<div class="tsd-signature tsd-kind-icon">test<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TestInterface</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> =&nbsp;ava as TestInterface&lt;{StellarTomlResolver: sinon.SinonStub;}&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/0721b47/src/lib/stellar-uri.spec.ts#L8">lib/stellar-uri.spec.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/b6737f3/src/lib/stellar-uri.spec.ts#L8">lib/stellar-uri.spec.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -161,13 +186,22 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/0721b47/src/lib/parse.ts#L22">lib/parse.ts:22</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/b6737f3/src/lib/parse.ts#L37">lib/parse.ts:37</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns true if the given URI is a SEP-0007 style URI, false otherwise.
+									Currently this only checks whether it starts with &#39;web+stellar:&#39; and is a valid type.</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>uri: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The URI string to check.</p>
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -178,22 +212,38 @@
 					<a name="parsestellaruri" class="tsd-anchor"></a>
 					<h3>parse<wbr>Stellar<wbr>Uri</h3>
 					<ul class="tsd-signatures tsd-kind-function">
-						<li class="tsd-signature tsd-kind-icon">parse<wbr>Stellar<wbr>Uri<span class="tsd-signature-symbol">(</span>uri<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="classes/stellaruri.html" class="tsd-signature-type">StellarUri</a></li>
+						<li class="tsd-signature tsd-kind-icon">parse<wbr>Stellar<wbr>Uri<span class="tsd-signature-symbol">(</span>uri<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="classes/transactionstellaruri.html" class="tsd-signature-type">TransactionStellarUri</a><span class="tsd-signature-symbol"> | </span><a href="classes/paystellaruri.html" class="tsd-signature-type">PayStellarUri</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/0721b47/src/lib/parse.ts#L5">lib/parse.ts:5</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/b6737f3/src/lib/parse.ts#L12">lib/parse.ts:12</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Parses a SEP-0007 style URI string and returns a TransactionStellarUri or PayStellarUri, depending on the type.</p>
+								</div>
+								<dl class="tsd-comment-tags">
+									<dt>throws</dt>
+									<dd><p>Throws an error if the uri is not a valid SEP-0007 style URI.</p>
+									</dd>
+								</dl>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>uri: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>The URI string to parse.</p>
+									</div>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="classes/stellaruri.html" class="tsd-signature-type">StellarUri</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="classes/transactionstellaruri.html" class="tsd-signature-type">TransactionStellarUri</a>
+								<span class="tsd-signature-symbol"> | </span>
+								<a href="classes/paystellaruri.html" class="tsd-signature-type">PayStellarUri</a>
+							</h4>
 						</li>
 					</ul>
 				</section>
@@ -209,6 +259,9 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum">
+						<a href="enums/stellaruritype.html" class="tsd-kind-icon">Stellar<wbr>Uri<wbr>Type</a>
+					</li>
 					<li class=" tsd-kind-class">
 						<a href="classes/paystellaruri.html" class="tsd-kind-icon">Pay<wbr>Stellar<wbr>Uri</a>
 					</li>
@@ -217,6 +270,9 @@
 					</li>
 					<li class=" tsd-kind-class">
 						<a href="classes/transactionstellaruri.html" class="tsd-kind-icon">Transaction<wbr>Stellar<wbr>Uri</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-not-exported">
+						<a href="globals.html#memotype" class="tsd-kind-icon">Memo<wbr>Type</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-not-exported">
 						<a href="globals.html#account" class="tsd-kind-icon">account</a>
