--- a/classes/stellaruri.html
+++ b/classes/stellaruri.html
@@ -114,6 +114,8 @@
 							<h3>Accessors</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-accessor tsd-parent-kind-class"><a href="stellaruri.html#callback" class="tsd-kind-icon">callback</a></li>
+								<li class="tsd-kind-get-signature tsd-parent-kind-class"><a href="stellaruri.html#ispublicnetwork" class="tsd-kind-icon">is<wbr>Public<wbr>Network</a></li>
+								<li class="tsd-kind-get-signature tsd-parent-kind-class"><a href="stellaruri.html#istestnetwork" class="tsd-kind-icon">is<wbr>Test<wbr>Network</a></li>
 								<li class="tsd-kind-accessor tsd-parent-kind-class"><a href="stellaruri.html#msg" class="tsd-kind-icon">msg</a></li>
 								<li class="tsd-kind-accessor tsd-parent-kind-class"><a href="stellaruri.html#networkpassphrase" class="tsd-kind-icon">network<wbr>Passphrase</a></li>
 								<li class="tsd-kind-get-signature tsd-parent-kind-class"><a href="stellaruri.html#operation" class="tsd-kind-icon">operation</a></li>
@@ -130,6 +132,8 @@
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><a href="stellaruri.html#getparam" class="tsd-kind-icon">get<wbr>Param</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><a href="stellaruri.html#setparam" class="tsd-kind-icon">set<wbr>Param</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="stellaruri.html#tostring" class="tsd-kind-icon">to<wbr>String</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="stellaruri.html#usepublicnetwork" class="tsd-kind-icon">use<wbr>Public<wbr>Network</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="stellaruri.html#usetestnetwork" class="tsd-kind-icon">use<wbr>Test<wbr>Network</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="stellaruri.html#verifysignature" class="tsd-kind-icon">verify<wbr>Signature</a></li>
 							</ul>
 						</section>
@@ -148,7 +152,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L17">lib/stellar-uri.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L17">lib/stellar-uri.ts:17</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -170,7 +174,7 @@
 					<div class="tsd-signature tsd-kind-icon">uri<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">URL</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L17">lib/stellar-uri.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L17">lib/stellar-uri.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -188,7 +192,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L38">lib/stellar-uri.ts:38</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L38">lib/stellar-uri.ts:38</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -206,7 +210,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L54">lib/stellar-uri.ts:54</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L54">lib/stellar-uri.ts:54</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -226,6 +230,51 @@
 						</li>
 					</ul>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-get-signature tsd-parent-kind-class">
+					<a name="ispublicnetwork" class="tsd-anchor"></a>
+					<h3>is<wbr>Public<wbr>Network</h3>
+					<ul class="tsd-signatures tsd-kind-get-signature tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">get</span> isPublicNetwork<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L91">lib/stellar-uri.ts:91</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns whether or not the network_passphase for this URI indicates that it is on the public network.</p>
+								</div>
+								<p>This is true if network_passphrase is not set or if it&#39;s set to the public network&#39;s passphrase.</p>
+							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-get-signature tsd-parent-kind-class">
+					<a name="istestnetwork" class="tsd-anchor"></a>
+					<h3>is<wbr>Test<wbr>Network</h3>
+					<ul class="tsd-signatures tsd-kind-get-signature tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">get</span> isTestNetwork<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L107">lib/stellar-uri.ts:107</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns whether or not the network_passphase for this URI indicates that it is on the test network.</p>
+								</div>
+							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-accessor tsd-parent-kind-class">
 					<a name="msg" class="tsd-anchor"></a>
 					<h3>msg</h3>
@@ -237,7 +286,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L109">lib/stellar-uri.ts:109</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L141">lib/stellar-uri.ts:141</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -254,7 +303,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L119">lib/stellar-uri.ts:119</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L151">lib/stellar-uri.ts:151</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -285,7 +334,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L73">lib/stellar-uri.ts:73</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L73">lib/stellar-uri.ts:73</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -303,7 +352,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L82">lib/stellar-uri.ts:82</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L82">lib/stellar-uri.ts:82</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -332,7 +381,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L27">lib/stellar-uri.ts:27</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L27">lib/stellar-uri.ts:27</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -355,7 +404,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L132">lib/stellar-uri.ts:132</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L164">lib/stellar-uri.ts:164</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -372,7 +421,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L139">lib/stellar-uri.ts:139</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L171">lib/stellar-uri.ts:171</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -402,7 +451,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L91">lib/stellar-uri.ts:91</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L123">lib/stellar-uri.ts:123</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -419,7 +468,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L100">lib/stellar-uri.ts:100</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L132">lib/stellar-uri.ts:132</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -448,7 +497,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L151">lib/stellar-uri.ts:151</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L183">lib/stellar-uri.ts:183</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -483,7 +532,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L161">lib/stellar-uri.ts:161</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L193">lib/stellar-uri.ts:193</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -515,7 +564,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L222">lib/stellar-uri.ts:222</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L254">lib/stellar-uri.ts:254</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Buffer</span></h4>
@@ -532,7 +581,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L210">lib/stellar-uri.ts:210</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L242">lib/stellar-uri.ts:242</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -558,7 +607,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L214">lib/stellar-uri.ts:214</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L246">lib/stellar-uri.ts:246</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -584,7 +633,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L206">lib/stellar-uri.ts:206</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L238">lib/stellar-uri.ts:238</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -593,6 +642,50 @@
 								</div>
 							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="usepublicnetwork" class="tsd-anchor"></a>
+					<h3>use<wbr>Public<wbr>Network</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">use<wbr>Public<wbr>Network<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L100">lib/stellar-uri.ts:100</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Sets the network_passphrase to be the passphrase of the public network.</p>
+								</div>
+							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="usetestnetwork" class="tsd-anchor"></a>
+					<h3>use<wbr>Test<wbr>Network</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">use<wbr>Test<wbr>Network<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L114">lib/stellar-uri.ts:114</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Sets the network_passphrase to be the passphrase of the test network.</p>
+								</div>
+							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -606,7 +699,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/96d6840/src/lib/stellar-uri.ts#L174">lib/stellar-uri.ts:174</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/658d769/src/lib/stellar-uri.ts#L206">lib/stellar-uri.ts:206</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -652,6 +745,12 @@
 							<li class=" tsd-kind-accessor tsd-parent-kind-class">
 								<a href="stellaruri.html#callback" class="tsd-kind-icon">callback</a>
 							</li>
+							<li class=" tsd-kind-get-signature tsd-parent-kind-class">
+								<a href="stellaruri.html#ispublicnetwork" class="tsd-kind-icon">is<wbr>Public<wbr>Network</a>
+							</li>
+							<li class=" tsd-kind-get-signature tsd-parent-kind-class">
+								<a href="stellaruri.html#istestnetwork" class="tsd-kind-icon">is<wbr>Test<wbr>Network</a>
+							</li>
 							<li class=" tsd-kind-accessor tsd-parent-kind-class">
 								<a href="stellaruri.html#msg" class="tsd-kind-icon">msg</a>
 							</li>
@@ -684,6 +783,12 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="stellaruri.html#tostring" class="tsd-kind-icon">to<wbr>String</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="stellaruri.html#usepublicnetwork" class="tsd-kind-icon">use<wbr>Public<wbr>Network</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="stellaruri.html#usetestnetwork" class="tsd-kind-icon">use<wbr>Test<wbr>Network</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="stellaruri.html#verifysignature" class="tsd-kind-icon">verify<wbr>Signature</a>
