--- a/globals.html
+++ b/globals.html
@@ -77,14 +77,16 @@
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-class"><a href="classes/paystellaruri.html" class="tsd-kind-icon">Pay<wbr>Stellar<wbr>Uri</a></li>
+								<li class="tsd-kind-class"><a href="classes/replacementsparser.html" class="tsd-kind-icon">Replacements<wbr>Parser</a></li>
 								<li class="tsd-kind-class"><a href="classes/stellaruri.html" class="tsd-kind-icon">Stellar<wbr>Uri</a></li>
 								<li class="tsd-kind-class"><a href="classes/transactionstellaruri.html" class="tsd-kind-icon">Transaction<wbr>Stellar<wbr>Uri</a></li>
 							</ul>
 						</section>
-						<section class="tsd-index-section tsd-is-not-exported">
+						<section class="tsd-index-section ">
 							<h3>Type aliases</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-type-alias tsd-is-not-exported"><a href="globals.html#memotype" class="tsd-kind-icon">Memo<wbr>Type</a></li>
+								<li class="tsd-kind-type-alias"><a href="globals.html#replacement" class="tsd-kind-icon">Replacement</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -97,7 +99,7 @@
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Type aliases</h2>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-is-not-exported">
 					<a name="memotype" class="tsd-anchor"></a>
@@ -105,9 +107,33 @@
 					<div class="tsd-signature tsd-kind-icon">Memo<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"none"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"id"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"text"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"hash"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"return"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/64a4383/src/lib/pay-stellar-uri.ts#L3">lib/pay-stellar-uri.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/d440e79/src/lib/pay-stellar-uri.ts#L3">lib/pay-stellar-uri.ts:3</a></li>
 						</ul>
 					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias">
+					<a name="replacement" class="tsd-anchor"></a>
+					<h3>Replacement</h3>
+					<div class="tsd-signature tsd-kind-icon">Replacement<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/d440e79/src/lib/replacement.ts#L1">lib/replacement.ts:1</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+							<li class="tsd-parameter">
+								<h5>hint<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5>
+							</li>
+							<li class="tsd-parameter">
+								<h5>id<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5>
+							</li>
+							<li class="tsd-parameter">
+								<h5>path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></h5>
+							</li>
+						</ul>
+					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -122,7 +148,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/64a4383/src/lib/parse.ts#L37">lib/parse.ts:37</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/d440e79/src/lib/parse.ts#L37">lib/parse.ts:37</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -154,7 +180,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/64a4383/src/lib/parse.ts#L12">lib/parse.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/stellarguard/stellar-uri/blob/d440e79/src/lib/parse.ts#L12">lib/parse.ts:12</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -202,6 +228,9 @@
 						<a href="classes/paystellaruri.html" class="tsd-kind-icon">Pay<wbr>Stellar<wbr>Uri</a>
 					</li>
 					<li class=" tsd-kind-class">
+						<a href="classes/replacementsparser.html" class="tsd-kind-icon">Replacements<wbr>Parser</a>
+					</li>
+					<li class=" tsd-kind-class">
 						<a href="classes/stellaruri.html" class="tsd-kind-icon">Stellar<wbr>Uri</a>
 					</li>
 					<li class=" tsd-kind-class">
@@ -209,6 +238,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-is-not-exported">
 						<a href="globals.html#memotype" class="tsd-kind-icon">Memo<wbr>Type</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#replacement" class="tsd-kind-icon">Replacement</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="globals.html#isstellaruri" class="tsd-kind-icon">is<wbr>Stellar<wbr>Uri</a>
@@ -233,6 +265,7 @@
 				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
 				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
@@ -281,7 +314,7 @@
 	</div>
 </footer>
 <div class="container tsd-generator">
-	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
+	<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
 <script src="assets/js/main.js"></script>
